# nu_plugin_connectorx

./: Cargo.toml  README.md  pixi.toml  tests.nu
.github/workflows/: ci.yaml
src/: main.rs
